# idle_champions_redeemer

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: app.rs  cache.rs  cli.rs  clipboard.rs  config.rs  interaction.rs  macros.rs  main.rs  progress.rs  remote.rs  setup.rs
