[package]
name = "icredeem"
description = "Redeem codes for Idle Champions of the Forgotten Realms."
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
]
repository = "https://github.com/liefland/idle_champions_redeemer"
homepage = "https://github.com/liefland/idle_champions_redeemer"
categories = ["games"]
keywords = ["idle_champions"]
readme = "README.md"
publish = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0.1"
enigo = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
licc = { version = "0.2", optional = true }
tokio = { version = "1.36", optional = true, features = ["macros", "time"] }
arboard = { version = "3.3", default-features = false }
indicatif = { version = "0.17", optional = true }

[features]
default = ["remote", "progress", "cache", "image"]
remote = ["licc", "tokio"] # permit remote code redemption
cache = [] # cache to file
wayland = ["arboard/wayland-data-control"] # allows for improved clipboard support on wayland
image = ["arboard/image-data"] # support copy/paste of images and restoring your clipboard if it has an image.
progress = ["indicatif"] # displays a progress bar while redeeming
